--- a/src/app/factura/factura.component.html
+++ b/src/app/factura/factura.component.html
@@ -86,7 +86,7 @@
                             <tfoot>
                                 <tr>
                                     <td colspan="6">
-                                        <a (click)="addnewproduct()" class="btn btn-success">[+]</a>
+                                        <a (click)="agregarNuevoProducto()" class="btn btn-success">[+]</a>
                                     </td>
                                 </tr>
                             </tfoot>
